--- a/src/landing/Landing.scss
+++ b/src/landing/Landing.scss
@@ -2,6 +2,24 @@
 
 .landing {
   height: 100vh;
+  .padding {
+    padding-right: 10px;
+    padding-top: 2px;
+  }
+  .top-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+    a {
+      text-decoration: none;
+      color: $fontColor;
+      font-weight: 600;
+      transition: 0.3s;
+      &:hover {
+        color: $purple;
+      }
+    }
+  }
   img {
     width: 700px;
     margin-right: 40vw;
