--- a/src/milestones/Milestones.scss
+++ b/src/milestones/Milestones.scss
@@ -3,5 +3,9 @@
     margin: auto;
     .mile {
         text-align: center;
+        H3 
+        {
+            font-size: 40px;
+        }
     }
 }
