--- a/src/milestones/Milestones.scss
+++ b/src/milestones/Milestones.scss
@@ -3,9 +3,17 @@
     margin: auto;
     .mile {
         text-align: center;
-        H3 
-        {
+        h3 {
             font-size: 40px;
+        }
+    }
+    a {
+        text-decoration: none;
+        color: $fontColor;
+        font-weight: 600;
+        transition: 0.3s;
+        &:hover {
+            color: $purple;
         }
     }
 }
