--- a/src/landing/Landing.scss
+++ b/src/landing/Landing.scss
@@ -3,13 +3,13 @@
 .landing {
   height: 100vh;
   .padding {
-    padding-right: 10px;
+    padding-left: 10px;
     padding-top: 2px;
   }
   .top-right {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
     a {
       text-decoration: none;
       color: $fontColor;
