--- a/src/sponsors/Sponsors.scss
+++ b/src/sponsors/Sponsors.scss
@@ -3,11 +3,17 @@
 .sponsors {
     width: 90vw;
     margin: auto;
-    .sponsor {
-        margin: auto;
+    .sponsors-list {
+        padding-top: 10px;
         text-align: center;
-        img {
-            width: 33vw;
+        justify-content: space-evenly !important;
+        flex-wrap: wrap;
+        .sponsor {
+            margin: auto;
+            text-align: center;
+            img {
+                width: 25vw;
+            }
         }
     }
     .panel-fit {
