--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@
 @import "./sponsors/Sponsors";
 @import "./team/Team";
 @import "./milestones/Milestones";
+@import "./speakers/Speakers";
 @import "Sponsorship";
 
 html {
