--- a/src/speakers/Speakers.scss
+++ b/src/speakers/Speakers.scss
@@ -1,20 +1,19 @@
 @import "../variables";
 
-.team {
+.speakers {
     width: 90vw;
     margin: auto;
     .margin-top {
         margin: 1% auto;
     }
-    .members {
+    .speakerss {
         text-align: center;
         justify-content: space-evenly !important;
         flex-wrap: wrap;
-        @media (min-width: $desktopMobileToggleWidth) {
-            padding-bottom: 6vh;
-        }
-        .member {
+        .speaker {
+            padding-bottom: 10px;
             @media (min-width: $desktopMobileToggleWidth) {
+                width: 25vw;
                 margin: 0 10px 0 10px;
                 h3 {
                     font-size: 20px;
