--- a/src/questions/Questions.scss
+++ b/src/questions/Questions.scss
@@ -4,32 +4,47 @@
     width: 90vw;
     margin: auto;
     .question-panel {
-        @media (min-width: $desktopMobileToggleWidth) {
-            padding-top: 20px;
-        }
+        padding: 15px 10% 0 10%;
         flex-wrap: wrap;
         .question {
+            @media (max-width: $desktopMobileToggleWidth) {
+                max-width: 90vw;
+            }
+            max-height: min-content;
+            padding-bottom: 15px;
+            max-width: 33vw;
+            width: 33vw;
+            min-width: 33vw;
             display: flex;
             flex-direction: column;
             justify-content: space-evenly !important;
             text-align: center;
             .q-text {
+                border-top-left-radius: 4px;
+                border-top-right-radius: 4px;
+                background-color: $darkBlue;
+                border: solid 2px white;
+                max-height: min-content;
                 font-weight: bold;
-                color: $purple !important;
-                padding: 0 5px 0 5px;
+                padding: 2%;
                 text-align: left;
             }
-            .ans {
-                @media (max-width: $desktopMobileToggleWidth) {
-                    max-width: 90vw;
-                }
-                max-width: 20vw;
-                padding-top: 5px;
+            .round-all {
+                border-radius: 4px !important;
             }
-            center {
-                @media (min-width: $desktopMobileToggleWidth) {
-                    min-height: 25vh;
-                    max-height: 25vh;
+            .no-display {
+                display: none;
+            }
+            .display {
+                display: contents;
+                .ans {
+                    padding: 3px;
+                    border-bottom-left-radius: 4px;
+                    border-bottom-right-radius: 4px;
+                    background-color: $darkBlue;
+                    border-left: solid 2px white;
+                    border-right: solid 2px white;
+                    border-bottom: solid 2px white;
                 }
             }
         }
