add outschool + stickergiant logo

--- a/src/schedule/Schedule.scss
+++ b/src/schedule/Schedule.scss
@@ -4,7 +4,7 @@
 .schedule {
     width: 90vw;
     margin: auto;
-        a {
+        a.link {
         text-decoration: none;
         color: $fontColor;
         font-weight: 600;
