--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@
 @import "./team/Team";
 @import "./milestones/Milestones";
 @import "./speakers/Speakers";
+@import "./prizes/Prizes";
 @import "Sponsorship";
 
 html {
